# lite_client

./: .gitignore  CMakeLists.txt  README.md  TODO  client.cc  core.h  core.xml  gen_core_config.py  main.cc
3rd_parties/include/event2/: event-config.h
Proto/: CMakeLists.txt  CProto.cpp  CProto.h  CProtoDef.h  CProto_Command.h  CProto_Common.h  ProtoActivity.h  ProtoActivityDef.h  ProtoBattle.cpp  ProtoBattle.h  ProtoBattleDef.h  ProtoCardTree.cpp  ProtoCardTree.h  ProtoCardTreeDef.h  ProtoChar.cpp  ProtoChar.h  ProtoChat.cpp  ProtoChat.h  ProtoContainer.cpp  ProtoContainer.h  ProtoContainerDef.h  ProtoDefine.cpp  ProtoDefineDef.h  ProtoEmotion.cpp  ProtoEmotion.h  ProtoEmotionDef.h  ProtoExplore.cpp  ProtoExploreDef.h  ProtoFriend.cpp  ProtoFriendDef.h  ProtoGeneral.cpp  ProtoGeneral.h  ProtoGeneralDef.h  ProtoGeneralTravel.cpp  ProtoGeneralTravel.h  ProtoGeneralTravelDef.h  ProtoItem.h  ProtoItemDef.h  ProtoLog.cpp  ProtoLog.h  (+43 more)
backup/: CMakeLists.txt  client.cc
cmake/: common.cmake
core/: CMakeLists.txt  core.cc  core.h  debug_log.cc  debug_log.h  droid_holder.cc  droid_holder.h  main.cc
droids/: CMakeLists.txt
droids/blackboard/: CMakeLists.txt  blackboard.cc
droids/dispatcher/: CMakeLists.txt  dispatcher.cc
droids/net/: CMakeLists.txt  export.cc  export.h  net_droid.cc  net_droid.h  session.cc  session.h
droids/protocol/xjcard/protocol_src/: CProto.cpp  CProtoDef.h  CProto_Command.h  ProtoActivity.cpp  ProtoBattle.cpp  ProtoBattleDef.h  ProtoCharDef.h  ProtoChatDef.h  ProtoContainerDef.h  ProtoDefine.h  ProtoDefineDef.h  ProtoEmotion.cpp  ProtoEmotion.h  ProtoExplore.h  ProtoExploreDef.h  ProtoFriend.h  ProtoGeneral.h  ProtoItem.cpp  ProtoItemDef.h  ProtoLogin.cpp  ProtoLogin.h  ProtoLoginDef.h  ProtoMail.cpp  ProtoMailDef.h  ProtoNotice.h  ProtoNoticeDef.h  ProtoPack.h  ProtoPackDef.h  ProtoPack_Package.cpp  ProtoPack_Package.h  ProtoPinJian.cpp  ProtoResource.h  ProtoSenario.h  ProtoSkillDef.h  ProtoSystemDialog.h  ProtoTest.cpp  ProtoTestDef.h  ProtoUser.h  proto_vector.h
droids/xjcard/: CMakeLists.txt
droids/xjcard/codec/: CMakeLists.txt  codec.cc
droids/xjcard/protocol/: CMakeLists.txt  CProto_Common.h  ProtoActivity.cpp  ProtoActivityDef.h  ProtoCardTree.cpp  ProtoCharDef.h  ProtoChat.cpp  ProtoChatDef.h  ProtoDefine.cpp  ProtoDefine.h  ProtoEmotion.h  ProtoEmotionDef.h  ProtoExplore.cpp  ProtoExplore.h  ProtoFriend.cpp  ProtoFriend.h  ProtoFriendDef.h  ProtoGeneral.cpp  ProtoGeneralTravel.cpp  ProtoItem.cpp  ProtoItem.h  ProtoLog.cpp  ProtoLog.h  ProtoLogin.cpp  ProtoNotice.cpp  ProtoPack.h  ProtoPinJian.h  ProtoPinJianDef.h  ProtoResourceDef.h  ProtoSenario.cpp  ProtoSkill.h  ProtoSystemDialog.h  ProtoSystemDialogDef.h  ProtoSystemTips.cpp  ProtoSystemTipsDef.h  ProtoSyt.cpp  ProtoTest.cpp  ProtoTestDef.h  ProtoTitle.h  ProtoTitleDef.h
post_install/: CMakeLists.txt
public/: cbuf.cc  cbuf.h  dlog.cc  dlog.h  droid.h  export.h  id_map.h  util.h
public/config/: droid_config  use_dlog.cc.conf  use_dlog.h.conf
public/interface/: blackboard.h  dispatcher.h  interface.h  net.h  protocol.h  xjcard.h
tests/: CMakeLists.txt  echo_svr.cc  test_droid.cc  test_net.cc
